# AES_XTS_OpenSSL_example

./: CMakeLists.txt  Makefile  README.md  example.c  xts_encryption.c  xts_encryption.h
include/aesxts/xts/: xts.hpp
src/: xts.cpp
src/xts/: xts.cpp
tests/: example.cpp
